[package]
name = "async_smoltcp"
version = "0.1.0"
authors = ["Lucas Zanella <me@lucaszanella.com>"]
edition = "2018"

[features]
default = ["tap", "tun", "vpn", "async", "log"]
vpn = []
tap = []
tun = []
async = ["tokio"]

[dependencies]
smoltcp = {git = "https://github.com/lucaszanella/smoltcp/", branch="ip-interface-alt-managed"}
tokio = { version = "1.4.0", features = ["rt-multi-thread", "macros", "net", "io-util", "rt", "time"], optional=true }
futures = { version="0.3.13", default-features = false, features = ["std", "executor"] }
log = { version="0.4.14", default-features = false, optional=true }
